--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#Server port
+server.port=2024
 spring.application.name=absensi-react
+#SQL DATABASE
+spring.datasource.url=jdbc:mysql://localhost:3306/absensi_react?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto= update
+
+#JWT
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
+
