--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,16 @@
 			<artifactId>spring-messaging</artifactId>
 			<version>5.3.25</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>6.14.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
