--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,16 @@
 			<artifactId>firebase-admin</artifactId>
 			<version>6.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.24</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext7-core</artifactId>
+			<version>7.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
