--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,12 @@
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itext7-core</artifactId>
-			<version>7.2.0</version>
+			<version>7.1.15</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>html2pdf</artifactId>
+			<version>3.0.4</version>
 		</dependency>
 	</dependencies>
 
