--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=2024
 spring.application.name=absensi-react
 #SQL DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/absensi_react?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/absensi_react?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto= update
