--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,10 @@
 <!--			<artifactId>html2pdf</artifactId>-->
 <!--			<version>3.0.4</version>-->
 <!--		</dependency>-->
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
