rekapan bulanan dan harian serta perbaikan tabel user

--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,12 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.2.3</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>backport-util-concurrent</groupId>
+            <artifactId>backport-util-concurrent</artifactId>
+            <version>3.1</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
