perbaikan super admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,6 @@ spring.mail.username=your-email@example.com
 spring.mail.password=your-email-password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+security.oauth2.authorization.jwt.expires-in=3600
 
 
