--- a/pom.xml
+++ b/pom.xml
@@ -93,16 +93,7 @@
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.24</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.itextpdf</groupId>-->
-<!--			<artifactId>itext7-core</artifactId>-->
-<!--			<version>7.1.15</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>com.itextpdf</groupId>-->
-<!--			<artifactId>html2pdf</artifactId>-->
-<!--			<version>3.0.4</version>-->
-<!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
@@ -122,6 +113,11 @@
             <artifactId>backport-util-concurrent</artifactId>
             <version>3.1</version>
         </dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>html2pdf</artifactId>
+			<version>3.0.2</version>
+		</dependency>
     </dependencies>
 
 	<build>
