--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,13 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto= update
 
-spring.mail.host=smtp.example.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@example.com
-spring.mail.password=your-email-password
+spring.mail.username=puskesmasonline273@gmail.com
+spring.mail.password=jggr ztck rguc jfmf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 security.oauth2.authorization.jwt.expires-in=3600
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
